<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the edit activity -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditReminderActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_reminder"
            style="@style/DisplayStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_reminder_name"
                android:hint="@string/hint_reminder"
                android:inputType="textCapWords"
                android:maxLength="50"
                style="@style/EditorFieldStyle" />

            <!-- Details field -->
            <EditText
                android:id="@+id/edit_reminder_details"
                android:hint="@string/hint_reminder_details"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="200"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <TimePicker
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/DialogTheme">
    </TimePicker>
</LinearLayout>
